# kasiopea2022

./: .gitignore  CMakeLists.txt  README.md  taskC.cpp  taskD.cpp  taskE.cpp  taskF.cpp  taskG.cpp  taskH.cpp  taskI.cpp
