cmake_minimum_required(VERSION 3.24)
project(kas2022)

set(CMAKE_CXX_STANDARD 17)

add_executable(taskC taskC.cpp)
add_executable(taskD taskD.cpp)
add_executable(taskE taskE.cpp)
add_executable(taskF taskF.cpp)
add_executable(taskG taskG.cpp)
add_executable(taskH taskH.cpp)
add_executable(taskI taskI.cpp)
